Fix: Allows words to be broken in comments

--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -49,8 +49,8 @@
 
 .text-content {
   color: #78716c;
-  text-wrap: pretty;
   line-height: 1.5;
+  overflow-wrap: break-word;
 }
 
 .comment-interaction {
